--- a/writing/article.Rmd
+++ b/writing/article.Rmd
@@ -43,34 +43,16 @@ Article describes sentiment-analysis of *Twitter*
 1. Сентимент-анализ
 ------------------
 
-Сентимент-анализ (анализ тональности) --- это раздел компьютерной лингвистики, в рамках которого изучается извлечение мнений и эмоциональной окрашенности текста. Как правило, с помощью анализа тональности выясняют отношение автора текста к рассматриваемой теме. Обычно такое отношение измеряют на простой шкале "положительное мнение" / "отрицательное мнение", более сложные системы предусматривают использование многоуровневой шкалы `r sitep("http://habrahabr.ru/post/149605/")`.
+Сентимент-анализ (анализ тональности) --- это раздел компьютерной лингвистики, в рамках которого изучается извлечение мнений и эмоциональной окрашенности текста. Как правило, с помощью анализа тональности выясняют отношение автора текста к рассматриваемой теме. Обычно такое отношение измеряют на простой шкале "положительное мнение" / "отрицательное мнение", более сложные системы предусматривают использование многоуровневой шкалы.
 
-В литературе встречаются разные способы формализировать модель мнений. Я лишь привел в пример одну из них. Также используется и разная терминология. В английском языке эту область исследования обычно называют opinion mining and sentiment analysis (дословно: «поиск мнений и анализ чувств»). В русских статьях обычно употребляется термин «анализ тональности». Несмотря на то, что тональность является лишь одной из характеристик мнения, именно задача классификации тональности является наиболее часто изучаемой в наши дни. Это можно объяснить несколькими причинами:
+Анализ тональности нашел применение в различных областях: социология, политология, психология, медицина, маркетинг и др. В каждом конкретном случае могут ставиться отличные исследовательские или коммерческие задачи, однако используемый инструментарий чаще всего совпадает.
 
-    Определение автора и темы является гораздо более трудными задачами чем классификация тональности, поэтому имеет смысл сначала решить более простую задачу, а затем уже переключиться на остальные.
-    Во многих случаях нам достаточно лишь определить тональность, т.к. другие характеристики нам уже известны. Например, если мы собираем мнения из блогов, обычно авторами мнений являются авторы постов, т.е. определять автора нам не требуется. Также зачастую нам уже известна тема: например, если мы производим в Твиттере поиск по ключевому слову «Windows 8», то затем нам нужно лишь определить тональность найденных твитов. Конечно же, это работает не во всех случаях, а лишь в большинстве из них. Но эти допущения позволяют в значительной мере упростить и так нелегкую задачу.
+Подходы к классификации тональности можно разделить на следующие категории:
+1. Использование набора "если-то".
+2. Словарный разбор предложений.
+3. Машинное обучение с учителем.
+4. Машинное обучение без учителя `r sitep("http://habrahabr.ru/post/149605/")`.
 
-
-
-Анализ тональности находит свое практическое применение в разных областях:
-
-    социология — собираем данные из соц. сетей (например, о религиозных взглядах)
-    политология — собираем данные из блогов о политических взглядах населения
-    маркетинг — анализируем Твиттер, чтобы узнать какая модель ноутбуков пользуется наибольшим спросом
-    медицина и психология — определяем депрессию у пользователей соц. сетей
-
-
-
-Подходы к классификации тональности
-
-Анализ тональности обычно определяют как одну из задач компьютерной лингвистики, т.е. подразумевается, что мы можем найти и классифицировать тональность, используя инструменты обработки естественного языка (такие как теггеры, парсеры и др.). Сделав большое обобщение, можно разделить существующие подходы на следующие категории:
-
-
-
-    Подходы, основанные на правилах
-    Подходы, основанные на словарях
-    Машинное обучение с учителем
-    Машинное обучение без учителя
 
 
 Первый тип систем состоит из набора правил, применяя которые система делает заключение о тональности текста. Например, для предложения «Я люблю кофе», можно применить следующее правило:
@@ -92,41 +74,14 @@ Article describes sentiment-analysis of *Twitter*
 
 Чтобы проанализировать текст, можно воспользоваться следующим алгоритмом: сначала каждому слову в тексте присвоить его значением тональности из словаря (если оно присутствует в словаре), а затем вычислить общую тональность всего текста. Вычислять общую тональность можно разными способами. Самый простой из них — среднее арифметическое всех значений. Более сложный — обучить классификатор (напр. нейронная сеть).
 
+
+
 Машинное обучение с учителем является наиболее распространенным методом, используемым в исследованиях. Его суть состоит в том, чтобы обучить машинный классификатор на коллекции заранее размеченных текстах, а затем использовать полученную модель для анализа новых документов. Именно про этот метод я расскажу далее.
+
+
 
 Машинное обучение без учителя представляет собой, наверное, наиболее интересный и в то же время наименее точный метод анализа тональности. Одним из примеров данного метода может быть автоматическая кластеризация документов.
 
-Машинное обучение с учителем
-
-Процесс создания системы анализа тональности очень похож на процесс создания других систем с применением машинного обучения:
-
-    необходимо собрать коллекцию документов для обучения классификатора
-    каждый документ из обучающей коллекции нужно представить в виде вектора признаков
-    для каждого документа нужно указать «правильный ответ», т.е. тип тональности (например, положительная или отрицательная), по этим ответам и будет обучаться классификатор
-    выбор алгоритма классификации и обучение классификатора
-    использование полученной модели
-
-
-
-Количество классов
-
-Количество классов, на которые делят тональность, обычно задается из спецификации системы. Например, заказчику требуется, чтобы система различала три вида тональности: «положительная», «нейтральная», «отрицательная». В исследованиях обычно рассматривается задача бинарной классификации тональности, т.е. классов всего два: «положительный» и «отрицательный». Из своего опыта могу сказать, что классификация тональности на более чем два класса — это очень сложная задача. Даже с тремя классами очень сложно достичь хорошей точности независимо от применяемого подхода.
-
-Если стоит задача классификации на более чем два класса, то тут возможны следующие варианты для обучения классификатора:
-
-    Плоская классификация — обучаем лишь один классификатор для всех классов
-
-    Иерархическая классификация — делим классы на группы и обучаем несколько классификаторов для определения групп. Например, если у нас 5 классов («сильно положительный», «средне положительный», «нейтральный», «средне отрицательный», «сильно отрицательный»), то можно сначала обучить бинарный классификатор, который отделяет нейтральные тексты от субъективных; затем обучить классификатор, который отделяет положительные мнения от отрицательных; и в итоге классификатор, который отделяет сильно выраженные мнения от средних.
-
-
-    Регрессия — обучаем классификатор для получения численного значения тональности, например от 1 до 10, где большее значение означает более положительную тональность.
-
-
-
-Обычно иерархическая классификация дает лучшие результаты чем плоская, т.к. для каждого классификатора можно найти набор признаков, который позволяет улучшить результаты. Однако, он требует больших времени и усилий для обучения и тестирования. Регрессия может показать лучшие результаты, если классов действительно много (от 5 и более).
-
-
-An important part of our information-gathering behavior has always been to find out what other people think. With the growing availability and popularity of opinion-rich resources such as online review sites and personal blogs, new opportunities and challenges arise as people can, and do, actively use information technologies to seek out and understand the opinions of others. The sudden eruption of activity in the area of opinion mining and sentiment analysis, which deals with the computational treatment of opinion, sentiment, and subjectivity in text, has thus occurred at least in part as a direct response to the surge of interest in new systems that deal directly with opinions as a first-class object.
 
 
 unsupervised learning for classification up/down recommendations `r citep(c(turney2002="10.3115/1073083.1073153"))` 
@@ -225,7 +180,7 @@ grid.raster(img)
 * Анализ сообщений в микроблогах на других языках.
 * Сопоставление эмоциональных оценок сообщений с рейтингами университетов по странам.
 
-Весь анализ был проведен на платформе *R* `r citep(citation())`, использовались пакеты *RCurl* `r citep(citation("RCurl"))`, *RJSONIO* `r citep(citation("RJSONIO"))` для агрегации данных от веб-служб *Twitter* и *GeoNames*, *ggplot2* `r citep(citation("ggplot2"))`, *wordcloud* `r citep(citation("wordcloud"))`, *rworldmap* `r citep(citation("rworldmap"))` --- для визуализации результатов, *plyr* `r citep(citation("plyr"))`, *stringr* `r citep(citation("stringr"))`, *data.table* `r citep(citation("data.table"))`--- для общей и статистической обработки данных, *tm* `r citep(citation("tm"))` --- для семантического анализа текста.
+Весь анализ был проведен на платформе *R* `r citep(citation())`, использовались пакеты *RCurl* `r citep(citation("RCurl"))`, *RJSONIO* `r citep(citation("RJSONIO"))` для агрегации данных от веб-служб *Twitter* и *GeoNames*, *ggplot2* `r citep(citation("ggplot2"))`, *wordcloud* `r citep(citation("wordcloud"))`, *rworldmap* `r citep(citation("rworldmap"))` --- для визуализации результатов, *plyr* `r citep(citation("plyr"))`, *stringr* `r citep(citation("stringr"))`, *data.table* `r citep(citation("data.table"))`--- для общей и статистической обработки данных, *tm* `r citep(citation("tm"))` --- для семантического анализа текста. Исходный программный код, использованный при написании статьи доступен по адресу `r citep("https://github.com/redmode/twitter-sentiment-education")`.
 
 
 Литература
