going to sleep...

--- a/writing/article.Rmd
+++ b/writing/article.Rmd
@@ -48,45 +48,23 @@ Article describes sentiment-analysis of *Twitter*
 Анализ тональности нашел применение в различных областях: социология, политология, психология, медицина, маркетинг и др. В каждом конкретном случае могут ставиться отличные исследовательские или коммерческие задачи, однако используемый инструментарий чаще всего совпадает.
 
 Подходы к классификации тональности можно разделить на следующие категории:
-1. Использование набора "если-то".
+1. Использование набора "если-то" правил.
 2. Словарный разбор предложений.
 3. Машинное обучение с учителем.
-4. Машинное обучение без учителя `r sitep("http://habrahabr.ru/post/149605/")`.
+4. Машинное обучение без учителя `r citep("http://habrahabr.ru/post/149605/")`.
 
+Первый тип систем состоит из большого набора правил, применяя которые система делает заключение о тональности текста. Для надежной работы системы необходимо составить большое количество правил, которые, зачастую, привязаны к определенной предметной области, при смене которой требуется актуализировать базу правил. Тем не менее, этот подход, при условии наличия хорошей базы правил, относят к одному из самых точных.
 
+Словарный разбор предложений требует наличия так называемых тональных словарей, содержащих слова с положительной и отрицательной тональностью, а часто и дополнительным весовым коэффициентом. При разборе предложения рассчитывается общее количество слов с различной тональностью и выводится итоговый показатель тональности, по которому можно оценить и общий эмоциональный фон текста. К примерам исследований в данном направлении можно отнести работу `r citep("http://jeffreybreen.wordpress.com/2011/07/04/twitter-text-mining-r-slides/")`. 
 
-Первый тип систем состоит из набора правил, применяя которые система делает заключение о тональности текста. Например, для предложения «Я люблю кофе», можно применить следующее правило:
+При машинном обучении с учителем требуется наличие заранее подготовленного корпуса текстовых документов с уже проведенной оценкой тональности, который используется для обучения классификационной модели. В рамках данного направления существует большое количество методов классификации, т.к. метод опорных векторов, деревья решений и пр., которые хорошо зарекомендовали себя на практике. К очевидным недостаткам обучения с учителем относится недоступность или отсутствие обучающей выборки во многих практических случаях `r citep(c(pang2008="10.1561/1500000011"))`.
 
-если сказуемое ("люблю") входит в положительный набор глаголов ("люблю", "обожаю", "одобряю" ...) и в предложении не имеется отрицаний, то классифицировать тональность как "положительная"
+Машинное обучение без учителя --- перспективный, но одновременно и наименее точный способ классификации текста. Вместе с тем его применение возможно в широком спектре приложений `r citep(c(turney2002="10.3115/1073083.1073153"))`.
 
+В данном исследовании мы применяли словарный разбор предложений и их оценку по тональным словарям `r citep("http://www.cs.uic.edu/~liub/FBS/opinion-lexicon-English.rar")`. Это было обусловлено, во-первых, сравнительной простотой используемых запросов, а во-вторых --- интернациональностью используемых в поиске терминов.
 
-
-Многие коммерческие системы используют данный подход, несмотря на то что он требует больших затрат, т.к. для хорошей работы системы необходимо составить большое количество правил. Зачастую правила привязаны к определенному домену (например, «ресторанная тематика») и при смене домена («обзор фотоаппаратов») требуется заново составлять правила. Тем не менее, этот подход является наиболее точным при наличии хорошей базы правил, но совершенно неинтересным для исследования.
-
-Подходы, основанные на словарях, используют так называемые тональные словари (affective lexicons) для анализа текста. В простом виде тональный словарь представляет из себя список слов со значением тональности для каждого слова. Вот пример из базы ANEW, переведенный на русский:
-слово   валентность (1-9)
-счастливый 	8.21
-хороший 	7.47
-скучный 	2.95
-сердитый 	2.85
-грустный 	1.61
-
-
-Чтобы проанализировать текст, можно воспользоваться следующим алгоритмом: сначала каждому слову в тексте присвоить его значением тональности из словаря (если оно присутствует в словаре), а затем вычислить общую тональность всего текста. Вычислять общую тональность можно разными способами. Самый простой из них — среднее арифметическое всех значений. Более сложный — обучить классификатор (напр. нейронная сеть).
-
-
-
-Машинное обучение с учителем является наиболее распространенным методом, используемым в исследованиях. Его суть состоит в том, чтобы обучить машинный классификатор на коллекции заранее размеченных текстах, а затем использовать полученную модель для анализа новых документов. Именно про этот метод я расскажу далее.
-
-
-
-Машинное обучение без учителя представляет собой, наверное, наиболее интересный и в то же время наименее точный метод анализа тональности. Одним из примеров данного метода может быть автоматическая кластеризация документов.
-
-
-
-unsupervised learning for classification up/down recommendations `r citep(c(turney2002="10.3115/1073083.1073153"))` 
-
-A latent variable model for geographic lexical variation `r citep(c(eisenstein2010="http://dl.acm.org/citation.cfm?id=1870782"))`
+К проблемам сентимент-анализа относят идентификацию иронии, использование локального или субкультурного сленга, сокращений, наличие грамматических ошибок и пр. Все это усложняет и без того не простые задачи по классификации текста. 
+Также при проведении анализа тональности отдельно выделяют такое направление, как выявление географических отличий в лексиконе `r citep(c(eisenstein2010="http://dl.acm.org/citation.cfm?id=1870782"))`. Действительно, одно и то же слово даже в рамках одной страны и одного языка может интерпретироваться двояко, что также усложняет анализ.
 
 
 2. Данные
@@ -116,21 +94,30 @@ A latent variable model for geographic lexical variation `r citep(c(eisenstein20
 5. Очистка текст сообщения от пунктуации, хэш-тэгов, удаление веб-ссылок, лишних пробелов, перевод в нижний регистр.
 6. Если после всех манипуляций все необходимые поля заполнены корректно, сообщение регистрируется в базе данных.
 
-Таким образом, в течение одной недели марта 2013 года было обработано и зарегистрировано `r nrow(stream)` сообщений микроблогов *Twitter* на английском языке, касающихся высшего образования.
+Таким образом, в течение одной недели марта 2013 года было обработано и зарегистрировано `r nrow(stream)` сообщений микроблогов *Twitter* на английском языке, касающихся высшего образования. После регистрации была проведена оценка тональности всех сообщений по пятибалльной шкале от -2 до +2.
 
 
 3. Результаты
 ------------------
 
+Большую часть всех сообщений составляли нейтральные по отношению к высшему образованию сообщения, а среди эмоционально окрашенных отзывов преобладали положительные (Таблица 1.). При этом более 60% всех сообщений было сгенерировано пользователями США и Великобритании. Среди прочих стран с англоговорящим населением (Канада, Австралия) выделяются государства Юго-Восточной Азии: Филиппины, Индия, Малайзия, Индонезия, что может свидетельствовать о высокой плотности населения и, одновременно, наличия потенциальных рынков сбыта образовательных услуг в этом регионе.
 
+**Таблица 1.** Распределение сообщений по странам
+```{r results='asis', echo=FALSE}
+load("../writing/tweets.pandoc.rda")
+pandoc.table(tweets.table, style="rmarkdown",
+             round=2, decimal.mark=",", keep.trailing.zeros=T, split.tables=Inf)
+```
 
-**Таблица 1.** Примеры положительных и отрицательных сообщений
+Типичные сообщения с положительной и отрицательной тональностью приведены в Таблице 2. Среди них можно выделить как относящиеся к образованию вообще, так и записи, которые носят частный характер. 
+
+**Таблица 2.** Примеры положительных и отрицательных сообщений
 ```{r results='asis', echo=FALSE}
 load("../writing/pos.neg.tweets.rda")
 pandoc.table(tweets, style="rmarkdown", split.cells=Inf, split.tables=Inf)
-# tweets
 ```
 
+Для наглядного представления частотного распределения слов, а также их взаимосвязи используют структуру "облако тегов" (*tags cloud*) (Рисунки 1 и 2). Наиболее часто встречающиеся слова размещают в середине и делают их более крупными, слова, связанные с ними, и появляющиеся в тексте немного реже, размещают по окружности от высокочастотных --- и так далее до внешней границы облака. На рисунках визуализированы два набора терминов: отдельно для положительных и отрицательных высказываний, которые встречались в тексте как минимум 50 раз.
 
 ```{r fig.width=10, fig.height=6, echo=FALSE}
 library(png)
@@ -140,7 +127,6 @@ grid.raster(img)
 ```
 **Рисунок 1.** Облако тегов для положительных сообщений
 
-
 ```{r fig.width=6, fig.height=6, echo=FALSE}
 library(png)
 library(grid)
@@ -149,21 +135,9 @@ grid.raster(img)
 ```
 **Рисунок 2.** Облако тегов для отрицательных сообщений
 
+Можно отметить, что слова, находящиеся в центре облака, являются, в основном, общеупотребляемыми, а абсолютное большинство слов текста не входят в словари тональности. Это может свидетельствовать о том, что выборка не была узко направленной и специфичной.
 
-**Таблица 2.** Распределение сообщений по странам
-```{r results='asis', echo=FALSE}
-load("../writing/tweets.pandoc.rda")
-pandoc.table(tweets.table, style="rmarkdown",
-             round=2, decimal.mark=",", keep.trailing.zeros=T, split.tables=Inf)
-```
-
-```{r fig.width=10, fig.height=6, echo=FALSE}
-library(png)
-library(grid)
-img <- readPNG("../writing/figure/map.png")
-grid.raster(img)
-```
-**Рисунок 3.** Карта распределения сообщений
+Распределение плотности оценок по странам со сравнительно высоким количеством сообщений слабо отличалось от общемирового распределения, что вполне предсказуемо в связи с доминирующим положением США (рисунок 3.). Большинство стран с достаточным количеством наблюдений, например, Россия (`r nrow(stream[stream$code=="RU",])` сообщений) имеют распределение плотности оценок мало отличающееся от мирового, а для стран с небольшим количеством наблюдений, т.к. Украина (`r nrow(stream[stream$code=="UA",])` сообщений) и Беларусь (`r nrow(stream[stream$code=="BY",])` сообщений) могут преобладать наблюдения с определенным типом тональности.
 
 ```{r fig.width=10, fig.height=4, echo=FALSE}
 library(png)
@@ -171,16 +145,41 @@ library(grid)
 img <- readPNG("../writing/figure/density.png")
 grid.raster(img)
 ```
-**Рисунок 4.** Плотность распределения оценок по выбранным странам
+**Рисунок 3.** Плотность распределения оценок по выбранным странам
+
+На рисунке 4. отображены только сообщения с положительной или отрицательной тональностью. Можно отметить, что в целом большее количество сообщений в Twitter исходило от пользователей из экономически активных регионов: США, Западной Европы, стран Карибского бассейна, восточного побережья Австралии, Юго-Восточной Азии, Индии, Юго-Восточного побережья Бразилии, Южной Африки, Западного побережья экваториальной Африки и некоторых других.
+
+```{r fig.width=10, fig.height=6, echo=FALSE}
+library(png)
+library(grid)
+img <- readPNG("../writing/figure/map.png")
+grid.raster(img)
+```
+**Рисунок 4.** Карта распределения сообщений
+
+Какие из этих регионов могут стать потенциальными рынками сбыта для белорусских образовательных услуг? Ответ на этот вопрос следует искать применительно к форме предоставления таких услуг. Если речь идет о дистанционном образовании, то, при должной организации, в любой из стран данных регионов можно конкурировать с локальными поставщиками услуг. Это может быть как ценовая конкуренция, так и нишевая конкуренция. Однако при предоставлении услуг традиционным способом существенными становятся вопросы географической близости и насыщенности местного рынка образования. В таком случае, основное внимание целесообразно уделить Юго-Восточной Азии, где наблюдается высокая плотность населения и сравнительно небольшое количество университетов на 1000 населения.
+
+На рисунках 4 и 5 заметно, что отрицательные сообщения сконцентрированы в нескольких "очагах", а в остальном они распределены равномерно и уступают положительным заметкам. Можно предположить, что такие явления связаны с локальными и/или временными событиями --- однако сделать достоверные выводы станет возможным только после проведения более масштабного исследования.
+
+```{r fig.width=10, fig.height=6, echo=FALSE}
+library(png)
+library(grid)
+img <- readPNG("../writing/figure/map.usa.png")
+grid.raster(img)
+```
+**Рисунок 5.** Карта распределения сообщений для США
 
 
 Заключение
 ------------------
-Направления дальнейших исследований:
-* Анализ сообщений в микроблогах на других языках.
-* Сопоставление эмоциональных оценок сообщений с рейтингами университетов по странам.
 
-Весь анализ был проведен на платформе *R* `r citep(citation())`, использовались пакеты *RCurl* `r citep(citation("RCurl"))`, *RJSONIO* `r citep(citation("RJSONIO"))` для агрегации данных от веб-служб *Twitter* и *GeoNames*, *ggplot2* `r citep(citation("ggplot2"))`, *wordcloud* `r citep(citation("wordcloud"))`, *rworldmap* `r citep(citation("rworldmap"))` --- для визуализации результатов, *plyr* `r citep(citation("plyr"))`, *stringr* `r citep(citation("stringr"))`, *data.table* `r citep(citation("data.table"))`--- для общей и статистической обработки данных, *tm* `r citep(citation("tm"))` --- для семантического анализа текста. Исходный программный код, использованный при написании статьи доступен по адресу `r citep("https://github.com/redmode/twitter-sentiment-education")`.
+Использование данных микроблогов Twitter становится мощным инструментом современного маркетинга, позволяющем за сравнительно короткий промежуток времени агрегировать большие объемы информации о потребителях. Одним из очевидных направлений использования таких сведений является сентимент-анализ или анализ тональности.
+
+Проведенное исследование показало, что в целом, отношение к высшему образованию положительное, большинство обнаруженных "очагов" отрицательных отзывов следует связывать с локальными или временными событиями. При этом распределение плотности оценок тональности сообщений мало отличается для стран с достаточным количеством наблюдений. При таргетировании белорусских образовательных услуг, предоставляемых на английском языке, следует обратить внимание на страны Юго-Восточной Азии.
+
+Среди направлений дальнейших исследований можно выделить анализ сообщений в микроблогах на языках, отличных от английского и сопоставление результатов с полученными в данной работе, сравнение эмоциональных оценок сообщений о высшем образовании с рейтингами университетов по странам, а также долгосрочные исследования, позволяющие нивелировать эффект локальных и временных событий.
+
+Анализ был проведен на базе платформы *R* `r citep(citation())`, использовались пакеты *RCurl* `r citep(citation("RCurl"))`, *RJSONIO* `r citep(citation("RJSONIO"))` для агрегации данных от веб-служб *Twitter* и *GeoNames*, *ggplot2* `r citep(citation("ggplot2"))`, *wordcloud* `r citep(citation("wordcloud"))`, *rworldmap* `r citep(citation("rworldmap"))` --- для визуализации результатов, *plyr* `r citep(citation("plyr"))`, *stringr* `r citep(citation("stringr"))`, *data.table* `r citep(citation("data.table"))`--- для общей и статистической обработки данных, *tm* `r citep(citation("tm"))` --- для семантического анализа текста, *pander* `r citep(citation("pander"))` --- для подготовки текста статьи. Исходный программный код, использованный при написании статьи доступен по адресу `r citep("https://github.com/redmode/twitter-sentiment-education")`.
 
 
 Литература
